# eigenpruning

./: Makefile  README.md  main.py  poetry.toml  pyproject.toml
data/: cb.py  constants.py  copa.py  int_mult.py  int_sum.py  prepare_dataset.py  rte.py
evaluation/: evaluate_model.py
finetuning/: finetune.py
models/: models.py
notebooks/: add_hooks.py  clean_exploration.py  compile_singular_values.py  compute_singular_values_effect.py  constants.py  decompose_model.py  exploration.py  find_circuit.py  get_singular_value_mask.py  ioi_dataset.py  mult_dataset.py  simplified_ioi_dataset.py  sum_dataset.py  tmp.tx
training/: compile_singular_values.py  compute_effect.py  constants.py  decompose_model.py  find_circuit.py  get_mask.py  save_backward_pass.py
